lib/src/duckdb_bindings.dart


  int duckdb_value_int16(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_int16(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_int16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int16 Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_int16');
  late final _duckdb_value_int16 = _duckdb_value_int16Ptr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int, int)>();

  int duckdb_value_int32(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_int32(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_int32');
  late final _duckdb_value_int32 = _duckdb_value_int32Ptr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int, int)>();

  int duckdb_value_int64(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_int64(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_int64');
  late final _duckdb_value_int64 = _duckdb_value_int64Ptr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_hugeint duckdb_value_hugeint(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_hugeint(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_hugeintPtr = _lookup<
      ffi.NativeFunction<
          duckdb_hugeint Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_hugeint');
  late final _duckdb_value_hugeint = _duckdb_value_hugeintPtr.asFunction<
      duckdb_hugeint Function(ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_decimal duckdb_value_decimal(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_decimal(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_decimalPtr = _lookup<
      ffi.NativeFunction<
          duckdb_decimal Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_decimal');
  late final _duckdb_value_decimal = _duckdb_value_decimalPtr.asFunction<
      duckdb_decimal Function(ffi.Pointer<duckdb_result>, int, int)>();

  int duckdb_value_uint8(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_uint8(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_uint8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_uint8');
  late final _duckdb_value_uint8 = _duckdb_value_uint8Ptr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int, int)>();

  int duckdb_value_uint16(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_uint16(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_uint16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Uint16 Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_uint16');
  late final _duckdb_value_uint16 = _duckdb_value_uint16Ptr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int, int)>();

  int duckdb_value_uint32(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_uint32(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_uint32');
  late final _duckdb_value_uint32 = _duckdb_value_uint32Ptr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int, int)>();

  int duckdb_value_uint64(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_uint64(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_uint64');
  late final _duckdb_value_uint64 = _duckdb_value_uint64Ptr
      .asFunction<int Function(ffi.Pointer<duckdb_result>, int, int)>();

  double duckdb_value_float(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_float(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_floatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Float Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_float');
  late final _duckdb_value_float = _duckdb_value_floatPtr
      .asFunction<double Function(ffi.Pointer<duckdb_result>, int, int)>();

  double duckdb_value_double(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_double(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_doublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_double');
  late final _duckdb_value_double = _duckdb_value_doublePtr
      .asFunction<double Function(ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_date duckdb_value_date(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_date(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_datePtr = _lookup<
      ffi.NativeFunction<
          duckdb_date Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_date');
  late final _duckdb_value_date = _duckdb_value_datePtr
      .asFunction<duckdb_date Function(ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_time duckdb_value_time(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_time(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_timePtr = _lookup<
      ffi.NativeFunction<
          duckdb_time Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_time');
  late final _duckdb_value_time = _duckdb_value_timePtr
      .asFunction<duckdb_time Function(ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_timestamp duckdb_value_timestamp(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_timestamp(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_timestampPtr = _lookup<
      ffi.NativeFunction<
          duckdb_timestamp Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_timestamp');
  late final _duckdb_value_timestamp = _duckdb_value_timestampPtr.asFunction<
      duckdb_timestamp Function(ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_interval duckdb_value_interval(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_interval(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_intervalPtr = _lookup<
      ffi.NativeFunction<
          duckdb_interval Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_interval');
  late final _duckdb_value_interval = _duckdb_value_intervalPtr.asFunction<
      duckdb_interval Function(ffi.Pointer<duckdb_result>, int, int)>();

  ffi.Pointer<ffi.Char> duckdb_value_varchar(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_varchar(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_varcharPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_varchar');
  late final _duckdb_value_varchar = _duckdb_value_varcharPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_string duckdb_value_string(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_string(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_stringPtr = _lookup<
      ffi.NativeFunction<
          duckdb_string Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_string');
  late final _duckdb_value_string = _duckdb_value_stringPtr.asFunction<
      duckdb_string Function(ffi.Pointer<duckdb_result>, int, int)>();

  ffi.Pointer<ffi.Char> duckdb_value_varchar_internal(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_varchar_internal(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_varchar_internalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_varchar_internal');
  late final _duckdb_value_varchar_internal =
      _duckdb_value_varchar_internalPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_string duckdb_value_string_internal(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_string_internal(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_string_internalPtr = _lookup<
      ffi.NativeFunction<
          duckdb_string Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_string_internal');
  late final _duckdb_value_string_internal =
      _duckdb_value_string_internalPtr.asFunction<
          duckdb_string Function(ffi.Pointer<duckdb_result>, int, int)>();

  duckdb_blob duckdb_value_blob(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_blob(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_blobPtr = _lookup<
      ffi.NativeFunction<
          duckdb_blob Function(
              ffi.Pointer<duckdb_result>, idx_t, idx_t)>>('duckdb_value_blob');
  late final _duckdb_value_blob = _duckdb_value_blobPtr
      .asFunction<duckdb_blob Function(ffi.Pointer<duckdb_result>, int, int)>();

  bool duckdb_value_is_null(
    ffi.Pointer<duckdb_result> result,
    int col,
    int row,
  ) {
    return _duckdb_value_is_null(
      result,
      col,
      row,
    );
  }

  late final _duckdb_value_is_nullPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<duckdb_result>, idx_t,
              idx_t)>>('duckdb_value_is_null');
  late final _duckdb_value_is_null = _duckdb_value_is_nullPtr
      .asFunction<bool Function(ffi.Pointer<duckdb_result>, int, int)>();

  ffi.Pointer<ffi.Void> duckdb_malloc(
    int size,
  ) {
    return _duckdb_malloc(
      size,
    );
  }

  late final _duckdb_mallocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Size)>>(
          'duckdb_malloc');
  late final _duckdb_malloc =
      _duckdb_mallocPtr.asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  void duckdb_free(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _duckdb_free(
      ptr,
    );
  }

  late final _duckdb_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'duckdb_free');
  late final _duckdb_free =
      _duckdb_freePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int duckdb_vector_size() {
    return _duckdb_vector_size();
  }

  late final _duckdb_vector_sizePtr =
      _lookup<ffi.NativeFunction<idx_t Function()>>('duckdb_vector_size');
  late final _duckdb_vector_size =
      _duckdb_vector_sizePtr.asFunction<int Function()>();
